fix dragging on mobile with icons

--- a/frontend/src/theme/index.css
+++ b/frontend/src/theme/index.css
@@ -23,8 +23,6 @@ html, body {
 }
 
 a, img {
-  user-select: none;
-  -webkit-user-select: none;
   -webkit-user-drag: none;
 }
 
